--- a/GraphPair1IsomorphicPair.ipynb
+++ b/GraphPair1IsomorphicPair.ipynb
@@ -44,39 +44,8 @@
     "            poly = independence_polynomial(subG)\n",
     "            results.append(poly)\n",
     "    return results\n",
-    "G1 = Graph()\n",
-    "G1.add_vertices([1, 2, 3, 4, 5, 6, 7, 8])\n",
-    "G1.add_edge(1, 2)\n",
-    "G1.add_edge(1, 3)\n",
-    "G1.add_edge(1, 4)\n",
-    "G1.add_edge(1, 6)\n",
-    "G1.add_edge(2, 5)\n",
-    "G1.add_edge(2, 6)\n",
-    "G1.add_edge(3, 4)\n",
-    "G1.add_edge(3, 7)\n",
-    "G1.add_edge(4, 5)\n",
-    "G1.add_edge(4, 8)\n",
-    "G1.add_edge(5, 6)\n",
-    "G1.add_edge(5, 7)\n",
-    "G1.add_edge(6, 8)\n",
-    "G1.add_edge(7, 8)\n",
-    "G2 = Graph()\n",
-    "G2.add_vertices([1, 2, 3, 4, 5, 6, 7, 8])\n",
-    "#(0, 3), (0, 4), (0, 6), (1, 3), (1, 5), (1, 6), (2, 4), (2, 5), (2, 6), (2, 7), (3, 5), (3, 7), (4, 7), (6, 7)\n",
-    "G2.add_edge(1, 2)\n",
-    "G2.add_edge(1, 3)\n",
-    "G2.add_edge(1, 4)\n",
-    "G2.add_edge(1, 8)\n",
-    "G2.add_edge(2, 5)\n",
-    "G2.add_edge(2, 6)\n",
-    "G2.add_edge(3, 4)\n",
-    "G2.add_edge(3, 7)\n",
-    "G2.add_edge(4, 5)\n",
-    "G2.add_edge(4, 8)\n",
-    "G2.add_edge(5, 6)\n",
-    "G2.add_edge(5, 7)\n",
-    "G2.add_edge(6, 8)\n",
-    "G2.add_edge(7, 8)\n",
+    "G1 = Graph({1:[2,3,4,6], 2:[1,5,6], 3:[1,4,7], 4:[1,3,5,8], 5:[2,4,6,7], 6:[1,2,5,8], 7:[3,5,8], 8:[4,6,7]})\n",
+    "G2 = Graph({1:[2,3,4,8], 2:[1,5,6], 3:[1,4,7], 4:[1,3,5,8], 5:[2,4,6,7], 6:[2,5,8], 7:[3,5,8], 8:[1,4,6,7]})\n",
     "vertices1 = G1.vertices()\n",
     "vertices2 = G2.vertices()\n",
     "for subset in combinations(vertices1, 7):\n",
