--- a/GraphPair3IsomorphicPair.ipynb
+++ b/GraphPair3IsomorphicPair.ipynb
@@ -31,48 +31,8 @@
     "            poly = independence_polynomial(subG)\n",
     "            results.append(poly)\n",
     "    return results\n",
-    "G1 = Graph()\n",
-    "G1.add_vertices([1, 2, 3, 4, 5, 6, 7, 8])\n",
-    "# (0, 2), (0, 4), (0, 5), (0, 6), (0, 7), (1, 3), (1, 4), (1, 5), (1, 6), (1, 7), (2, 4), (2, 6), (2, 7), (3, 5), (3, 6), (3, 7), (4, 5)\n",
-    "G1.add_edge(1, 2)\n",
-    "G1.add_edge(1, 3)\n",
-    "G1.add_edge(1, 4)\n",
-    "G1.add_edge(1, 5)\n",
-    "G1.add_edge(1, 6)\n",
-    "G1.add_edge(2, 3)\n",
-    "G1.add_edge(2, 5)\n",
-    "G1.add_edge(2, 7)\n",
-    "G1.add_edge(3, 4)\n",
-    "G1.add_edge(3, 5)\n",
-    "G1.add_edge(3, 6)\n",
-    "G1.add_edge(4, 6)\n",
-    "G1.add_edge(4, 8)\n",
-    "G1.add_edge(5, 7)\n",
-    "G1.add_edge(5, 8)\n",
-    "G1.add_edge(6, 7)\n",
-    "G1.add_edge(6, 8)\n",
-    "G1.add_edge(7, 8)\n",
-    "G2 = Graph()\n",
-    "G2.add_vertices([1, 2, 3, 4, 5, 6, 7, 8])\n",
-    "# (0, 2), (0, 4), (0, 5), (0, 6), (0, 7), (1, 3), (1, 4), (1, 6), (1, 7), (2, 4), (2, 5), (2, 6), (3, 5), (3, 6), (3, 7), (4, 5), (4, 7)\n",
-    "G2.add_edge(1, 2)\n",
-    "G2.add_edge(1, 3)\n",
-    "G2.add_edge(1, 4)\n",
-    "G2.add_edge(1, 5)\n",
-    "G2.add_edge(1, 6)\n",
-    "G2.add_edge(2, 5)\n",
-    "G2.add_edge(2, 7)\n",
-    "G2.add_edge(2, 8)\n",
-    "G2.add_edge(3, 4)\n",
-    "G2.add_edge(3, 5)\n",
-    "G2.add_edge(3, 6)\n",
-    "G2.add_edge(3, 7)\n",
-    "G2.add_edge(4, 6)\n",
-    "G2.add_edge(4, 8)\n",
-    "G2.add_edge(5, 7)\n",
-    "G2.add_edge(5, 8)\n",
-    "G2.add_edge(6, 7)\n",
-    "G2.add_edge(7, 8)\n",
+    "G1 = Graph({1:[2,3,4], 2:[1,3,5,7], 3:[1,2,4,5,6], 4:[1,3,6], 5:[1,2,3,7], 6:[1,3,4,7,8], 7:[2,5,6,8], 8:[4,5,6,7]})\n",
+    "G2 = Graph({1:[2,3,4], 2:[1,5,7,8], 3:[1,4,5,6,7], 4:[1,3,6], 5:[1,2,3,7], 6:[1,3,4,7], 7:[2,3,5,6,8], 8:[2,4,5,7]})\n",
     "vertices1 = G1.vertices()\n",
     "vertices2 = G2.vertices()\n",
     "for subset in combinations(vertices1, 7):\n",
@@ -88,6 +48,14 @@
     "            print(subset2)\n",
     "            print(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67bfe571-8d54-4bfb-88e7-fed9d1a2cdd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
